Update CircleCI Java dependency to Java 11